...
                                    VStack(alignment: .leading) {
                                        // Movie Title
                                        Text(movie.title ?? "N/A")
                                            .font(.title)
                                            .foregroundColor(.white)
                                            .bold()
                                            .accessibility(identifier: "movieTitle")
                                        
                                        // Release Date
                                        Text(vm.formatReleaseYear(from: movie.releaseDate))
                                            .foregroundColor(Color(hex: "#9F9F9F"))
                                            .accessibility(identifier: "movieReleaseDate")
                                            .padding(.leading, movie.posterPath == nil ? 20 : 0)
                                            .font(.system(size: 18))
                                        
                                        // Runtime
                                        if let runtime = movie.runtime {
                                            if runtime > 0 {
                                                Text("\(runtime) minutes")
                                                    .foregroundColor(Color(hex: "#9F9F9F"))
                                                    .accessibility(identifier: "movieRunTime")
                                                    .padding(.leading, movie.posterPath == nil ? 20 : 0)
                                                    .font(.system(size: 18))
                                            } else {
                                                Text("No Runtime Found")
                                                    .foregroundColor(Color(hex: "#9F9F9F"))
                                                    .padding(.leading, movie.posterPath == nil ? 20 : 0)
...
                                            else {
                                                vm.addToLog()
                                            }
                                            HapticFeedbackManager.shared.triggerSelectionFeedback()
                                        }) {
                                            if (!vm.completed) {
                                                Text(vm.isInUnwatchedMovies ? "ADD TO WATCHED" : vm.isInWatchedMovies ? "ADD TO UNWATCHED" : "ADD TO LOG")
                                                    .foregroundColor(.white)
                                                    .bold()
                                            } else {
                                                Text("ADDED ✓")
                                                    .foregroundColor(.white)
                                                    .bold()
...
                                    .font(.system(size: 18))
                                    .bold()
                                if let crew = movie.credits?.crew, let director = crew.first(where: { $0.job == "Director" }) {
                                    Text(director.name ?? "N/A")
                                        .foregroundColor(.white)
                                        .bold()
                                        .accessibility(identifier: "movieDirector")
                                        .font(.system(size: 16))
                                }
                                
                                // Cast
                                Text("Cast")
                                    .padding(.bottom, 2)
...
                                    let names = cast.prefix(3).map { $0.name ?? "N/A" }
                                    let commaSepNames = names.joined(separator: ", ")
                                    Text(commaSepNames)
                                        .foregroundColor(.white)
                                        .bold()
                                        .padding(.bottom, 50)
                                        .accessibility(identifier: "movieCast")
                                        .font(.system(size: 16))
                                }
                            }
                        }
                        .padding(.horizontal, 16)
                    }
...
