...
     The body of the 'AddLogSheetView' view, defining the SwiftUI content
     */
    var body: some View {
        NavigationView {
            Form {
                TextField("Log Name", text: $newLogName)
                    .accessibility(identifier: "newLogNameTextField")
                
                if logsViewModel.getUserId() != nil {
                    Section {
                        Toggle(isOn: $isPublic) {
                            Text("Public Log")
                        }
...
                    HapticFeedbackManager.shared.triggerNotificationFeedback(type: .success)
                }) {
                    Text("Add Log")
                        .frame(maxWidth: .infinity)
                        .multilineTextAlignment(.center)
                }
                .accessibility(identifier: "createLogButton")
                
                Button(action: {
                    isPresented = false
                }) {
                    Text("Cancel")
                        .frame(maxWidth: .infinity)
...
